---
config:
    theme: neutral
    layout: elk
    defaultRenderer: elk
    elk:
        nodePlacementStrategy: NETWORK_SIMPLEX
---

classDiagram
    TextureManager --* Scene
    GraphicsManager ..|> Disposable
    Renderable <.. GraphicsManager: Uses
    Disposable <|.. ResourceCache~K&comma; V: Disposable~
    Scene --o SceneManager
    SceneManager ..|> Disposable
    ResourceCache <|-- MusicCache: #60;#60;bind#62;#62; #60;K -> String, V -> Music#62;
    Entity ..|> Movable
    Entity ..|> Renderable
    Entity --o EntityManager
    CollidableEntity --|> Entity
    CollidableEntity ..|> ColliderMesh
    EntityRenderer --o Entity
    MusicManager *-- MusicCache
    Disposable <|.. MusicManager
    TextureManager --|> ResourceCache: #60;#60;bind#62;#62; #60;K -> String, V -> Texture#62;
    SoundManager --|> ResourceCache: #60;#60;bind#62;#62; #60;K -> String, V -> Sound#62;
    Scene *-- SoundManager


    class Entity {
        <<abstract>>

        # transform: Matrix4

        # Entity(transform: Matrix4, renderer: EntityRenderer)
        # Entity(position: Vector3, size: Vector3, rotation: Quaternion, renderer: EntityRenderer)
        + getPosition() Vector3
        + setPosition(position: Vector3) void
        + getSize() Vector3
        + setSize(size: Vector3) void
        + getRotation() Quaternion
        + setRotation(rotation: Quaternion) void
        + setRotation(axis: Vector3, radians: float) void
        + getTransform() Matrix4
        + getRenderer() EntityRenderer
        + setRenderer(renderer: EntityRenderer) void
        + translate(delta: Vector3) void
        + scale(scale: Vector3) void
        + rotate(delta: Quaternion) void
        + rotate(axis: Vector3, radians: float) void
        + transform(transform: Matrix4) void
        + isVisible(camera: Camera) boolean
        + getZOrder(camera: Camera) float
        + render(batch: TextureBatch, camera: Camera) void
        + update(deltaTime: float) void
    }

    class CollidableEntity {
        <<abstract>>

        # CollidableEntity(position: Vector3, size: Vector3, rotation: Quaternion, renderer: EntityRenderer)
        + onCollision(other: CollidableEntity)* void
    }

    class EntityManager {
        - entities: ArrayList~Entity~

        + EntityManager()
        + getEntities() Entity[]
        + add(entity: Entity) void
        + addAll(entity: List~Entity~) void
        + remove(entity: Entity) void
        + removeAll() void
        + updateCollisions() void
        + update(deltaTime: float) void
    }

    class Movable {
        <<interface>>

        + translate(delta: Vector3) void
        + rotate(axis: Vector3, radians: float) void
    }

    class ResourceCache~K&comma; V: Disposable~ {
        <<abstract>>

        - items: HashMap~K&comma; V~

        # load(key: K)* V
        + get(key: K) V
        # values() Iterable~V~
        + remove(key: K) void
        + dispose() void
    }

    class Scene {
        <<abstract>>

        # sounds: SoundManager
        # textures: TextureManager

        + Scene()
        + load()* void
        + unload() void
        + update(deltaTime: float)* void
        + render(graphics: GraphicsManager)* void
    }

    class SceneManager {
        - currentScene: Scene
        - scenes: HashMap~String&comma; Scene~
        - graphics: GraphicsManager

        + SceneManager()
        + addScene(name: String, scene: Scene) void
        + switchScene(name: String) void
        + update(deltaTime: float) void
        + render() void
        + dispose() void
    }

    class MusicCache {
        + MusicCache()
        # load(path: String) Music
        + dispose() void
    }

    class MusicManager {
        - musicCache: MusicCache
        - volume: float

        + MusicManager()
        + getVolume() float
        + setVolume(volume: float) void
        + isMusicPlaying(path: String) boolean
        + startMusic(path: String) void
        + pauseMusic(path: String) void
        + stopMusic(path: String) void
        + dispose() void
    }

    class SoundManager {
        - volume: float

        + getVolume() float
        + setVolume(volume: float) void
        # load(path: String) Sound
        + play(path: String) long
    }

    class TextureManager {
        # load(path: String) Texture
    }
